# abax-liquidator

./: .dockerignore  .env.local  .env.local.docker  .env.secret.example  .eslintrc.json  .gitignore  .lintstagedrc.js  .lintstagedrc.json  .prettierignore  .swcrc  Cargo.toml  LICENSE  README.md  TODO.md  actor.node.Dockerfile  actor.node.Dockerfile.dockerignore  docker-compose.yml  drizzle.config.ts  fetchWithRetries.sh  fetch_events_parallel.sh  kucoinExchangeMarkets.json  liquidator.ts__eventLog.json  logrotate.conf  metadata-azero-testnet.json  package-lock.json  package.json  pnpm-lock.yaml  rabbitmq.Dockerfile  tsconfig.json  uniq_addresses.json
db/: connection.ts  index.ts  migrate.ts  pg_hba.conf  restore.sh  schema.ts
db/backup/: Dockerfile  pg_backup.config  pg_backup.sh  pg_backup_rotated.sh  pg_restore.sh
db/migrations/: 0000_early_jasper_sitwell.sql  (+29 more)
fetcher/: Cargo.toml  rust-toolchain.toml
fetcher/src/: config.rs  main.rs
scripts/: ApiProviderWrapper.ts  borrowUntilUndercollateralized.ts  common.ts  fetchEvents.ts  fundReserves.ts  fundWalletWithTestTokens.ts  generated_users copy.json  generated_users.json  liquidator.ts  monitorBlockAnalysis.ts  printStats.ts  scriptTemplate.ts  stuffEventsIntoDb.ts  supplyAndBorrow1000Users.ts  utils.ts
src/: constants.ts  deployedContracts.ts  eventFeeder.ts  liquidator.ts  logger.ts  logic.md  messageQueueConsts.ts  periodicHFUpdater.ts  priceChangeHFUpdater.ts  priceUpdater.ts  reserveDataChainUpdater.ts  runActor.ts  runActorsLocally.ts  runTsActors.ts  types.ts  userDataChainUpdater.ts  utils.ts
(+94 files in other folders)
