[workspace]
resolver = "2"
members = [
    "fetcher"
]

[workspace.package]
version = "0.0.1"
authors = [""]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }